--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
 	"version": "0.1.0",
 	"author": "Box (https://www.box.com/)",
 	"private": true,
-	"dependencies": {
+	"devDependencies": {
 		"grunt": "~0.4.1",
 		"grunt-contrib-concat": "~0.3.0",
 		"grunt-contrib-connect": "~0.5.0",
-		"grunt-contrib-qunit": "~0.3.0"
+		"grunt-contrib-qunit": "~0.3.0",
+		"grunt-contrib-jshint": "~0.7.0"
 	}
 }
