Convert T3 to ESLint
- Removed JSHint
- Fixed a couple of linting errors

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "grunt-contrib-connect": "~0.5.0",
     "grunt-contrib-jshint": "~0.7.0",
     "grunt-contrib-qunit": "~0.3.0",
+    "grunt-eslint": "~1.0.0",
     "grunt-jsdoc": "~0.4.1",
     "grunt-mocha-phantomjs": "~0.6.0",
     "jquery": "^1.11.1",
