--- a/package.json
+++ b/package.json
@@ -6,16 +6,14 @@
   "private": true,
   "devDependencies": {
     "assertive-chai": "~1.0.0",
-    "grunt": "~0.4.1",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-connect": "~0.5.0",
-    "grunt-contrib-jshint": "~0.7.0",
-    "grunt-contrib-qunit": "~0.3.0",
-    "grunt-eslint": "~1.0.0",
-    "grunt-jsdoc": "~0.4.1",
+    "grunt": "^0.4.5",
+    "grunt-contrib-concat": "^0.5.0",
+    "grunt-contrib-connect": "^0.9.0",
+    "grunt-eslint": "^6.0.0",
+    "grunt-jsdoc": "^0.5.8",
     "grunt-mocha-phantomjs": "~0.6.0",
-    "jquery": "~1.11.1",
-    "mocha": "~1.21.4",
-    "sinon": "~1.10.3"
+    "jquery": "^1.11.1",
+    "mocha": "^2.1.0",
+    "sinon": "^1.12.2"
   }
 }
