--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "t3",
+  "name": "t3js",
   "description": "T3 Javascript Framework",
   "version": "1.1.0",
   "author": "Box (https://www.box.com/)",
