Create t3-testing bundle
- simplifying application-stub
- adding function stubs to notify tester to stub dependencies

new dist file with:
- lib/box.js
- lib/event-target.js
- tests/utils/application-stub.js

fixes #61

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@ doc
 .idea
 .DS_Store
 npm-debug.log
-dist/t3-*.js
+dist/t3-[0-9]*.js
+dist/t3-testing-[0-9]*.js
 
 # Karama generated test coverage
 coverage-client
