CommonJS all of the lib files and export bundle
- adding proxyquire for testing browserified source files
- modified tests to use CommonJS
- modified build process to account for browserification
- downgraded karma-coverage to 0.2.6 to support browserify-istanbul
- updated ESLint rules to account for CommonJS changes

fixes #24

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,14 +1,13 @@
 {
-	"globals": {
-		"window": false,
-		"document": false,
-		"Box": false,
-		"$": false
+	"env": {
+		"node": true,
+		"browser": true,
+		"jquery": true
 	},
 	"rules": {
 		"brace-style": 2,
 		"func-style": [2, "declaration"],
-		"strict": [2, "function"],
+		"strict": [2, "global"],
 		"guard-for-in": 2,
 		"no-floating-decimal": 2,
 		"no-underscore-dangle": 0,
