--- a/package.json
+++ b/package.json
@@ -24,18 +24,24 @@
     "minor": "node Makefile.js minor",
     "major": "node Makefile.js major"
   },
+  "main": "lib/box.js",
   "devDependencies": {
     "assertive-chai": "^1.0.2",
+    "browserify": "^9.0.8",
+    "browserify-istanbul": "^0.2.1",
     "dateformat": "^1.0.11",
     "eslint": "^0.18.0",
     "jquery": "^1.11.1",
     "karma": "^0.12.31",
-    "karma-coverage": "^0.2.7",
+    "karma-browserify": "^4.1.2",
+    "karma-coverage": "^0.2.6",
     "karma-mocha": "^0.1.10",
     "karma-phantomjs-launcher": "^0.1.4",
     "karma-threshold-reporter": "^0.1.15",
     "mocha": "^2.2.1",
     "phantomjs": "^1.9.16",
+    "proxyquire-universal": "^1.0.4",
+    "proxyquireify": "^1.2.2",
     "semver": "^4.3.3",
     "shelljs": "^0.4.0",
     "shelljs-nodecli": "^0.1.1",
