Breaking out dom events into an abstraction layer, building different versions of t3 accordingly

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "karma-mocha-reporter": "^1.0.2",
     "karma-phantomjs-launcher": "^0.1.4",
     "karma-threshold-reporter": "^0.1.15",
+    "leche": "^2.1.1",
     "mocha": "^2.2.1",
     "phantomjs": "^1.9.16",
     "semver": "^4.3.3",
