Updated API docs

--- a/_data/docs_nav.yml
+++ b/_data/docs_nav.yml
@@ -44,6 +44,8 @@
   - id: behaviors
     title: Behaviors
   - id: event-target
-    title: Event Target
+    title: EventTarget
+  - id: dom-event-delegate
+    title: DOMEventDelegate
   - id: context
     title: Context
