Add linting to test directory
fixes #115

--- a/tests/.eslintrc
+++ b/tests/.eslintrc
@@ -10,7 +10,8 @@
 		"mocha": false,
 		"chai": false,
 		"sinon": false,
-		"assert": false
+		"assert": true,
+		"leche": true
 	},
 	"rules": {
 		"brace-style": 2,
